# advent-of-code-2022

./: .gitignore  README.md  README.md.gyb  paths.json  paths.schema.json
.github/workflows/: run-macos.yml  run-ubuntu.yml  run.yml
day01/: README.md  run
day01/src/: day01.applescript
day02/: Makefile  bootstrap  run
day02/src/: day02.vala
day03/: bootstrap  build.zig  run
day03/src/: main.zig
day04/: bootstrap  run
day04/src/: day04.rkt
day05/: CHANGELOG.md  README.md  bootstrap  project.clj  run
day06/: CMakeLists.txt  bootstrap  run
day07/: bootstrap  run
day07/src/: day07.pl
day08/: bootstrap  run  settings.gradle
day08/app/: build.gradle
day09/: bootstrap  day09.cabal  package.yaml  run  stack.yaml
day09/app/: Main.hs
day09/resources/: demo-single.txt
day10/: Makefile  bootstrap
day11/: .gitignore  README.md  bootstrap  mix.exs  run
day12/: .gitignore  bootstrap  env  run  settings.gradle  setup-env
day13/: bootstrap  run
day14/: bootstrap  day14.opam  dune-project  run
day15/: bootstrap  run
day16/: .gitignore  Program.fs  bootstrap  run
day17/: Program.cs  bootstrap
day18/: .gitignore  README.md  day18.py  day18.shortcut  implemented_this_in_python_to_check_dont_tell_anyone.py
day19/: Cargo.toml  bootstrap  path  run
day20/: Makefile  bootstrap  run
day21/: bootstrap  day21.pl  run
day22/: Package.swift  README.md  bootstrap  path  run
day23/: CMakeLists.txt  Makefile  bootstrap  run
day24/: Manifest.toml  bootstrap  day24.jl  path  run
day25/: bootstrap  day25.py  run
scripts/: generate-readme
(+26 files in other folders)
